<?xml version="1.0"?>
<package>
    <name>robot_controller</name>
    <version>0.0.0</version>
    <description>The robot_controller package</description>

    <maintainer email="morandi.lorenzo14@gmail.com">lorenzo</maintainer>
    <license>BSD</license>
    <author email="morandi.lorenzo14@gmail.com">lorenzo</author> 

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>stdr_robot</build_depend>
    <build_depend>stdr_parser</build_depend>
    <build_depend>lemon_ros</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>stdr_robot</run_depend>
    <run_depend>stdr_parser</run_depend>
    <run_depend>lemon_ros</run_depend>
</package>